fixed bug with swagger
